fixe bug with overflow

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,11 @@
+html {
+    overflow-x: hidden;
+}
+
+body {
+    overflow: hidden;
+}
+
 .navbar .btn-outline-light:hover {
     color: var(--bs-dark);
 }
@@ -113,6 +121,10 @@
 
     .contact-info {
         margin-top: 15px;
+    }
+
+    .navbar-brand {
+        display: none;
     }
 }
 
